# SnapEnv

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  k3d-config.yaml  pyproject.toml
.docker/: Dockerfile.api
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6682e94a52ab_add_preview_environment_event_types.py  e9e5c0fd98fa_initial_schema_pr_pipeline_stage_.py
argocd/: application-dev.yaml.example  project.yaml
infra/helm/snapenv/: Chart.yaml  values-local.yaml.example  values.yaml
infra/helm/snapenv/templates/: deployment.yaml  grafana-dashboard.yaml  ingress.yaml  postgresql.yaml  redis.yaml  secret.yaml  service.yaml  servicemonitor.yaml
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate.backup  terraform.tfvars.example  variables.tf
scripts/: init-db.sh  setup-cluster.sh
src/: __init__.py
src/api/: main.py
src/api/routes/: dashboard.py  events.py  pipelines.py  pull_requests.py  webhooks.py  websocket.py
src/api/static/: dashboard.css  dashboard.html
src/models/: __init__.py  config.py  database.py  entities.py
src/schemas/: api.py
src/services/: argocd.py
src/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_api.py  test_argo.py  test_signature.py  test_webhooks.py
