[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SnapEnv"
version = "0.1.0"
description = "Dashboard and ephemeral preview environments for every Pull Request"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # Kubernetes & GitOps
    "kubernetes>=30.0.0",
    "httpx>=0.27.0",
    # Utilities
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "black>=26.1.0",
    "mypy>=1.19.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "factory-boy>=3.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "bandit>=1.8.0",
    "pre-commit>=3.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is expected in tests
"src/api/**" = ["B008"]  # FastAPI uses Depends() and Query() in defaults by design
"src/models/entities.py" = ["UP042"]  # StrEnum breaks SQLAlchemy Enum() columns

[tool.black]
line-length = 110
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.bandit]
exclude_dirs = [".venv", "build", "dist"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "tests/**"]
